# hierarchical-demand-reconciliation-with-temporal-anomaly-feedback

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: exploration.ipynb
results/: results.json  training_metrics.json
scripts/: README.md  demo_train.py  evaluate.py  train.py
src/hierarchical_demand_reconciliation_with_temporal_anomaly_feedback/: __init__.py
src/hierarchical_demand_reconciliation_with_temporal_anomaly_feedback/evaluation/: __init__.py  metrics.py
src/hierarchical_demand_reconciliation_with_temporal_anomaly_feedback/models/: __init__.py  model.py
src/hierarchical_demand_reconciliation_with_temporal_anomaly_feedback/training/: __init__.py  trainer.py
src/hierarchical_demand_reconciliation_with_temporal_anomaly_feedback/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
